fixing gap
changing the whole navbar (hopefully)

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ navbar{
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
+  margin:0;
 }
 
 /* Style the links inside the navigation bar */
